Version 0.1.1
-------------
 * psys.poll: handle missing EPOLLHUP and EPOLLERR.


Version 0.1
-----------
 * Initial release: psys has been separated from psh.